# localhost-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
assets/: ICON_SETUP.md  app.icns
assets/icons/: README.md
docs/: FILTERING_GUIDE.md  RELEASE_NOTES_v0.2.0.md
scripts/: README.md  _archive_homebrew_tap.sh  build_all.sh  build_app.sh  build_dmg.sh  run.sh
src/: __init__.py  config.py  main.py  port_scanner.py  process_monitor.py  quick_actions.py  ui_helpers.py  updater.py
tests/: test_cpu.py  test_monitor.py  test_scanner.py
