[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localhost-monitor"
version = "0.2.0"
description = "Monitor and kill localhost development servers from macOS menubar"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Elber Dalfidan", email = "elberdalfidan@gmail.com"}
]
keywords = ["macos", "menubar", "localhost", "process-monitor", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "rumps>=0.4.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "py2app>=0.28",
]

[project.scripts]
# Development-only: For testing in terminal
# End users should use the DMG installer
localhost-monitor = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
